_sass/includes/_navbar.scss
.language-selector {
  padding: 0.5em !important;
  
  i {
    font-size: 1.3em !important;
    margin: 0 !important;
  }
  
  &:hover {
    color: #337ab7;
  }
}

// To clear things when we float the element inside nav and ul
.clear {
  *zoom: 1;

  &:after {
    clear: both;
  }

  &:before,
  &:after {
    content: " ";
    display: table;
  }
}

.site-header {
  padding: 2% 2% 1% 2%;
  background: #ffffff;
  display: inline-block;
  float: left;
  width: 100%;
  position: relative;
  z-index: 100;
  border-bottom: 1px solid #eee;

  .branding {
    float: left;

    .site-title {
      font-size: 1.5em;
      margin-left: 10px;
      display: inline-block;
      color: #262626;
      font-weight: bold;
    }

    .avatar {
      height: 3em;
      width: 3em;
      margin-top: -13px;
      border-radius: 0.2em;
      margin-right: 1em;
      vertical-align: middle;
    }
  }

  nav {
    list-style: none;
    margin: 0;
    padding: 0;
    float: right;

    ul {
      margin: 0;
      padding: 0;
      list-style: none;
      display: flex;
      align-items: center;

      &.hide {
        @media (max-width: $break) {
          display: none;
        }
      }
    }

    li {
      display: inline-block;
      margin-right: 0.4em;

      a {
        color: #262626;
        text-decoration: none;
        display: inline-flex;
        align-items: center;
        padding: 0.5em 0.6em;

        &:hover {
          color: #337ab7;
        }

        &.language-selector {
          padding: 0.5em;
          i {
            font-size: 1.2em;
          }
        }
      }
    }

    .separator {
      color: #262626;
      opacity: 0.7;
    }

    .toggle {
      display: none;
      
      @media (max-width: $break) {
        display: block;
        float: right;
        padding: 0.5em;
        color: #262626;
        font-size: 1.3em;
        cursor: pointer;
        
        &:hover {
          color: #337ab7;
        }
      }
    }

    @media (max-width: $break) {
      float: none;
      width: 100%;

      ul {
        display: none;
        width: 100%;
        text-align: left;
        background: #ffffff;
        padding: 1em;
        position: absolute;
        left: 0;
        top: 100%;
        box-shadow: 0 2px 5px rgba(0,0,0,0.1);

        &.hide {
          display: none;
        }

        &:not(.hide) {
          display: block;
        }
      }

      li {
        display: block;
        margin: 0.5em 0;
        width: 100%;

        a {
          display: flex;
          padding: 0.5em 0;
          color: #262626;

          .navbar-label {
            display: inline-block;
            color: #262626;
            margin-left: 10px;
          }

          &:hover {
            color: #337ab7;
            .navbar-label {
              color: #337ab7;
            }
          }
        }
      }

      .separator {
        display: none;
      }
    }
  }
}

.navbar-icon {
  color: #262626;
  margin-right: 5px;
}

.navbar-label {
  color: #262626;
  display: inline-block;
  vertical-align: middle;
  
  &.navbar-label-with-icon {
    margin-left: 5px;
  }
}

/* Responsive nav */
@media (max-width: 768px) {
  .site-header {
    padding: 1em 2em;

    .branding {
      display: inline-block;
      width: 100%;

      .site-title {
        margin-left: 0;
      }
    }

    nav {
      .separator {
        display: none !important;
      }

      ul {
        width: 100%;
        text-align: left;
        float: left;
        padding: 1em 0;
        background: var(--background);
        position: absolute;
        left: 0;
        top: 100%;
        box-shadow: 0 2px 5px rgba(0,0,0,0.1);

        li {
          display: block;
          float: none;
          margin: 0;
          padding: 0.5em 2em;
          border-top: 1px solid var(--border);

          &:first-child {
            border-top: none;
          }

          a {
            display: block;
            width: 100%;
          }
        }
      }
    }
  }
}

/* ---- Responsive ---- */
@media screen and (max-width: $break) {
  .site-header {
    img.avatar {
      margin-top: -7px
    }

    .site-title {
      margin-top: 7px;
    }
  }

  nav {
    height: auto;

    .separator {
      display: none !important;
    }

    ul {
      width: 100%;
      overflow: hidden;
      transition: all 0.3s ease;

      &.hide {
        opacity: 0;
        visibility: hidden;
        transform: translateY(-10px);
      }

      li {
        width: 100%;
        text-align: left;
        font-size: 1em;
        position: relative;
        background-color: var(--background);
        backdrop-filter: brightness(0.98);

        a {
          padding: 0.5em 0;
          transition: color 0.3s ease;
        }
      }
    }
  }
}

